# vogo

./: .dockerignore  .env.example  .gitignore  AI_ENDPOINTS_IMPLEMENTED.md  AWS_SETUP.md  CACHE_AND_UI_IMPROVEMENTS.md  CHROME_EXTENSION_COMPLETE.md  CI_CD_SETUP.md  CURSOR_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOY_WEB_APP.sh  Dockerfile.backend  Dockerfile.web  FIXES_APPLIED.md  FRONTEND_AUTH_COMPLETE.md  FRONTEND_AUTH_TODO.md  FRONTEND_QUICKSTART.md  GETTING_STARTED.md  GODADDY_SETUP.md  IMPLEMENTATION_COMPLETE.md  LLM_UPGRADE_SUMMARY.md  LOAD_BENEFITS_NOW.sh  MAJOR_IMPROVEMENTS.md  README.md  RECOMMENDATIONS_UPGRADE.md  SETUP_CHECKLIST.md  SMART_ADD_IMPLEMENTED.md  SSL_SETUP.md  START_BACKEND.sh  UI_UPGRADE_SUMMARY.md  VSCODE_DEBUG_SETUP.md  docker-compose.prod.yml  nginx-app.conf  nginx.conf  package.json
backend/: ENV_TEMPLATE.md  add_aa_to_admin.py  alembic.ini  approve_all_benefits.py  check_migration.py  fix_aa_benefits.py  load_seed_data_api.py  main.py  pyproject.toml  requirements.txt  setup_admin_aa_api.py  test_aa_recommendations.py  test_ai_endpoints.py  test_semantic_matching.py
backend/alembic/: env.py
backend/alembic/versions/: 10000000000_initial_schema.py  10189lll60l2_add_plan_tier_field.py  30504cbf80e5_add_recommendation_table.py  40623def90f6_add_provider_plan_hierarchy.py  50734eff10g7_add_smart_add_fields.py  60745hhf20h8_add_user_auth_fields.py  70856iig30i9_add_affiliate_fields.py  80967jjh40j0_add_analytics_events.py  91078kkk50k1_add_optimization_recommendation_kinds.py
backend/app/api/: admin.py  ai.py  analytics.py  auth.py  bank_statement.py  benefits.py  chat.py  check.py  check_semantic.py  dev_admin.py  llm.py  memberships.py  memberships_discover.py  memberships_validate.py  recommendations.py  router.py  user_memberships.py  users.py
backend/app/core/: auth.py  config.py  db.py  openai_client.py  security.py
backend/app/data/: uk_memberships.py
backend/app/models/: __init__.py  analytics.py  benefit.py  membership.py  recommendation.py  session.py  user.py  user_membership.py  vendor.py
backend/app/schemas/: __init__.py  ai.py  auth.py  benefit.py  chat.py  llm.py  membership.py  recommendation.py  user.py  user_membership.py  vendor.py
backend/app/services/: ai_client.py  ai_prompts.py  bank_statement_parser.py  benefit_discovery_cron.py  chat_service.py  embeddings.py  extractor.py  fetcher.py  gpt_websearch.py  id_map.py  (+12 more)
backend/ops/: fix_admin_role.py  fix_user_passwords.py  generate_hashes.py  make_admin.py  seed.py  seed_benefits.json
backend/scripts/: discover_benefits_cron.py
(+91 files in other folders)
