[tool.poetry]
name = "vogoplus-app-backend"
version = "0.1.0"
description = "VogoPlus.app Backend API - Intelligent Membership Benefits Platform"
authors = ["VogPlus.app Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
psycopg = {extras = ["binary"], version = "^3.1.13"}
alembic = "^1.12.1"
httpx = "^0.25.1"
python-dotenv = "^1.0.0"
openai = "^1.3.5"
tiktoken = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

