[tool.poetry]
name = "vogoplus-app-backend"
version = "0.1.0"
description = "VogoPlus.app Backend API - Intelligent Membership Benefits Platform"
authors = ["VogPlus.app Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
psycopg = {extras = ["binary"], version = "^3.1.13"}
alembic = "^1.12.1"
httpx = "^0.25.1"
python-dotenv = "^1.0.0"
openai = "^1.3.5"
tiktoken = "^0.5.1"
numpy = "^1.26.2"
beautifulsoup4 = "^4.12.2"
duckduckgo-search = "^3.9.6"
rapidfuzz = "^3.5.2"
orjson = "^3.9.10"
cachetools = "^5.3.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.1.0"
pdfplumber = "^0.10.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
